# betka-fedmsg

./: .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  fedmsg-celerize-map.yaml  listen.py  openshift-fedmsg.yml  requirements.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: pr-tests.yaml
tests/: requirements.txt  test_celerize.py  test_rules_engine.py
tests/data/: test-celery-map.yaml
ucho/: celerize.py  fedmsg_listener.py  rules_engine.py  utils.py
ucho/data/configuration/: fedmsg-celerize-map.yaml
